更新經歷及照片

--- a/css/style.css
+++ b/css/style.css
@@ -449,7 +449,7 @@ figure {
 body{
       font-family: 'cwTeXYen', sans-serif;
 }
-h1{
+h1,h4{
   font-family: 'cwTeXYen', sans-serif;
 }
 /*# sourceMappingURL=style.css.map */
