開發經驗圖示更改辨識顏色

--- a/css/style.css
+++ b/css/style.css
@@ -453,3 +453,6 @@ h1,h4{
   font-family: 'cwTeXYen', sans-serif;
 }
 /*# sourceMappingURL=style.css.map */
+.fh5co-feature .secret i{
+  color:  #5599FF;
+}
